# my_ai_learning

./: .env.example  .gitignore  AGENT_README.md  CLAUDE.md  LANGCHAIN_DEMO_README.md  LANGGRAPH_INTEGRATION.md  MCP_SERVER_README.md  OPTIMIZATION_REPORT.md  README.md  README_NEW.md  README_WEB.md  README_WINDOWS.md  RUN_LANGCHAIN_DEMO.md  check_config.py  demo-check.bat  demo-demo.bat  demo-examples-cmd.bat  demo-examples.bat  demo-interactive.bat  example_usage.py  interactive_demo.py  interactive_simple.py  langchain_demo_simple.py  langchain_requirements.txt  langgraph_agent.py  launch.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  run_demo.bat  run_demo.sh  run_examples.py  run_individual_examples.py  run_langgraph_demo.py  run_mcp_server.py  run_tests.py  run_web.bat  run_web_dev.bat  setup.bat  (+5 more)
chatbot/: README.md  __init__.py
chatbot/api/direct/: test3.py
chatbot/api/langchain/: moonshot_langchain.py
chatbot/api/langgraph/: __init__.py  langgraph_client.py  langgraph_workflows.py
chatbot/api/openai/: moonshot_openai.py
chatbot/config/: settings.py
chatbot/examples/: langgraph_examples.py
chatbot/examples/advanced/: langchain_demo_fixed.py  langchain_think_act_review.py
chatbot/examples/basic/: langchain_basic.py  openai_basic.py
chatbot/tests/: test_langgraph_integration.py
chatbot/tests/unit/: test_langchain_quick.py  test_mcp_client.py
scripts/: DEMO_SCRIPTS.md  README.md  check.bat  demo.bat  demo_agent.py  init.bat  interactive.bat  mcp_server.py  run_agent.bat  run_demo.py  run_mcp.bat  setup.bat  test.bat  test_agent.py  test_langchain.py  test_mcp.py
src/demo_chatbot/: __init__.py  cli.py  demo.py  examples.py  web_server.py
src/demo_chatbot/agents/: langgraph_agent.py
src/demo_chatbot/config/: __init__.py  settings.py
src/demo_chatbot/servers/: __init__.py  mcp_server.py
src/demo_chatbot/tools/: __init__.py
src/demo_chatbot/utils/: logger.py
tests/: test_agents.py  test_config.py  test_enhanced_agents.py  test_enhanced_config.py  test_enhanced_servers.py  test_servers.py
